refactor(jedis-compat): amend feedbacks
Signed-off-by: prashanna-frsh <prashanna.rajendran@freshworks.com>